--- a/references.bib
+++ b/references.bib
@@ -255,3 +255,42 @@ PMCID: PMC5606090}
 	doi = {10.1080/2331186X.2017.1416898},
 	url = {https://www.tandfonline.com/doi/abs/10.1080/2331186X.2017.1416898}
 }
+
+@article{durso,
+	title = {The Dire Disregard of Measurement Invariance Testing in Psychological Science},
+	author = {{D'Urso}, Epifanio Damiano and Maassen, Esther and Assen, Marcel A. L. M. van and Nuijten, {Michèle B.} and Roover, Kim De and Wicherts, Jelte},
+	year = {2022},
+	doi = {10.31234/osf.io/n3f5u},
+	langid = {en-us}
+}
+
+@article{samejima1969,
+	title = {Estimation of latent ability using a response pattern of graded scores},
+	author = {Samejima, Fumiko},
+	year = {1969},
+	month = {03},
+	date = {1969-03-01},
+	journal = {Psychometrika},
+	pages = {1--97},
+	volume = {34},
+	number = {1},
+	doi = {10.1007/BF03372160},
+	url = {https://doi.org/10.1007/BF03372160},
+	langid = {en}
+}
+
+@article{samejima1994,
+	title = {Estimation of Reliability Coefficients Using the Test Information Function and Its Modifications},
+	author = {Samejima, Fumiko},
+	year = {1994},
+	month = {09},
+	date = {1994-09-01},
+	journal = {Applied Psychological Measurement},
+	pages = {229--244},
+	volume = {18},
+	number = {3},
+	doi = {10.1177/014662169401800304},
+	url = {https://doi.org/10.1177/014662169401800304},
+	note = {Publisher: SAGE Publications Inc},
+	langid = {en}
+}
